# MySQL-Spatial-UDF

./: .gitignore  CMakeLists.txt  GeometryUtils.cpp  GeometryUtils.h  MySpatialUDF.cpp  MySpatialUDF.def  MySpatialUDF.h  MySpatialUDF.sln  MySpatialUDF.sql  MySpatialUDF.sql.in  MySpatialUDF.vcxproj  MySpatialUDF.vcxproj.filters  MySpatialUDF_win.sql  README.md  index.html  params.json
cmake/: FindMYSQL.cmake  FindPROJ.cmake
generator/: call.tmpl  checkparam.txt  compare.txt  compute.txt  function_bool.txt  function_geom.txt  generate.tcl
sql/: create_spatial_ref_sys.sql  tests.sql
